.tmp/AUTHZ-003/red-ac1-authorize_held_vs_missing.txt
   Compiling but-authz v0.0.0 (/Users/justinrich/Projects/gitbutler/.kb-run-sprint/worktrees/AUTHZ-003/crates/but-authz)
error[E0432]: unresolved import `but_authz::authorize`
 --> crates/but-authz/tests/authorize.rs:2:59
  |
2 |     Authority, Denial, GovConfig, Principal, PrincipalId, authorize, load_governance_config,
  |                                                           ^^^^^^^^^ no `authorize` in the root
  |
help: a similar name exists in the module
  |
2 -     Authority, Denial, GovConfig, Principal, PrincipalId, authorize, load_governance_config,
2 +     Authority, Denial, GovConfig, Principal, PrincipalId, authority, load_governance_config,
  |

For more information about this error, try `rustc --explain E0432`.
error: could not compile `but-authz` (test "authorize") due to 1 previous error
